--- a/PhpTravels/test-output/emailable-report.html
+++ b/PhpTravels/test-output/emailable-report.html
@@ -9,10 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">22,638</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">154,824</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.automation.test.PhpTravelsTest</td><td><a href="#m0">valid_LoginTest</a></td><td rowspan="1">1535646471506</td><td rowspan="1">9841</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.automation.test.PhpTravelsTest</td><td><a href="#m0">badLoginPasswordTest</a></td><td rowspan="1">1535675348519</td><td rowspan="1">5302</td></tr><tr class="passedeven"><td><a href="#m1">hotelSearchTest</a></td><td rowspan="1">1535675371331</td><td rowspan="1">83092</td></tr><tr class="passedeven"><td><a href="#m2">validLoginTest</a></td><td rowspan="1">1535675323763</td><td rowspan="1">10451</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.automation.test.PhpTravelsTest#valid_LoginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.automation.test.PhpTravelsTest#badLoginPasswordTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.automation.test.PhpTravelsTest#hotelSearchTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.automation.test.PhpTravelsTest#validLoginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
