--- a/PhpTravels/test-output/index.html
+++ b/PhpTravels/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\GirDeep PC\AppData\Local\Temp\testng-eclipse--689199111\testng-customsuite.xml</span>
+                    <span>C:\Users\GirDeep PC\AppData\Local\Temp\testng-eclipse--857365847\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.automation.test.PhpTravelsTest" hash-for-method="valid_LoginTest">valid_LoginTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.automation.test.PhpTravelsTest" hash-for-method="badLoginPasswordTest">badLoginPasswordTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.automation.test.PhpTravelsTest" hash-for-method="hotelSearchTest">hotelSearchTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.automation.test.PhpTravelsTest" hash-for-method="validLoginTest">validLoginTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,9 +135,23 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="valid_LoginTest">
-                  </a> <!-- valid_LoginTest -->
-                  <span class="method-name">valid_LoginTest</span>
+                  <a name="badLoginPasswordTest">
+                  </a> <!-- badLoginPasswordTest -->
+                  <span class="method-name">badLoginPasswordTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="hotelSearchTest">
+                  </a> <!-- hotelSearchTest -->
+                  <span class="method-name">hotelSearchTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="validLoginTest">
+                  </a> <!-- validLoginTest -->
+                  <span class="method-name">validLoginTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +159,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\GirDeep PC\AppData\Local\Temp\testng-eclipse--689199111\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\GirDeep PC\AppData\Local\Temp\testng-eclipse--857365847\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -147,8 +171,8 @@
       &lt;class name=&quot;com.automation.object.LoginPage&quot;/&gt;
       &lt;class name=&quot;com.automation.data.Constants&quot;/&gt;
       &lt;class name=&quot;com.automation.test.PhpTravelsMethods&quot;/&gt;
+      &lt;class name=&quot;com.automation.base.PhpTravelsBase&quot;/&gt;
       &lt;class name=&quot;com.automation.utilities.Excel&quot;/&gt;
-      &lt;class name=&quot;com.automation.base.PhpTravelsBaseClass&quot;/&gt;
       &lt;class name=&quot;com.automation.object.UserHomePage&quot;/&gt;
       &lt;class name=&quot;com.automation.object.GuestHomePage&quot;/&gt;
       &lt;class name=&quot;com.automation.object.UserAccountPage&quot;/&gt;
@@ -193,16 +217,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'valid_LoginTest')
+data.setCell(0, 1, 'hotelSearchTest')
 data.setCell(0, 2, 'com.automation.test.PhpTravelsTest')
-data.setCell(0, 3, 9841);
+data.setCell(0, 3, 83092);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'validLoginTest')
+data.setCell(1, 2, 'com.automation.test.PhpTravelsTest')
+data.setCell(1, 3, 10451);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'badLoginPasswordTest')
+data.setCell(2, 2, 'com.automation.test.PhpTravelsTest')
+data.setCell(2, 3, 5302);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 9 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -217,28 +249,24 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">6 ignored methods</span>
+            <span class="header-content">4 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">com.automation.base.PhpTravelsBaseClass</span>
+              <span class="ignored-class-name">com.automation.base.PhpTravelsBase</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">load_Property</span>
+                <span class="ignored-method-name">TearDown</span>
                 <br/>
-                <span class="ignored-method-name">Tear_Down</span>
+                <span class="ignored-method-name">loadProperty</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
             <div class="ignored-class-div">
               <span class="ignored-class-name">com.automation.test.PhpTravelsTest</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">bad_LoginPasswordTest</span>
+                <span class="ignored-method-name">TearDown</span>
                 <br/>
-                <span class="ignored-method-name">hotel_SearchTest</span>
-                <br/>
-                <span class="ignored-method-name">load_Property</span>
-                <br/>
-                <span class="ignored-method-name">Tear_Down</span>
+                <span class="ignored-method-name">loadProperty</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -252,30 +280,54 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.automation.test.PhpTravelsMethods</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
-                <span class="method-name">load_Property</span>
+                <span class="method-name">loadProperty</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.automation.test.PhpTravelsTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
-                <span class="method-name">open_FirefoxBrowser</span>
-                <span class="method-start">858 ms</span>
+                <span class="method-name">openBrowser</span>
+                <span class="method-start">743 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">valid_LoginTest</span>
-                <span class="method-start">12484 ms</span>
+                <span class="method-name">validLoginTest</span>
+                <span class="method-start">23737 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">close_Browser</span>
-                <span class="method-start">22326 ms</span>
+                <span class="method-name">closeBrowser</span>
+                <span class="method-start">34189 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">openBrowser</span>
+                <span class="method-start">35656 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">badLoginPasswordTest</span>
+                <span class="method-start">48493 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">closeBrowser</span>
+                <span class="method-start">53796 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">openBrowser</span>
+                <span class="method-start">56688 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">hotelSearchTest</span>
+                <span class="method-start">71305 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">closeBrowser</span>
+                <span class="method-start">154398 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.automation.test.PhpTravelsMethods</div> <!-- chronological-class-name -->
               <div class="configuration-suite after">
-                <span class="method-name">Tear_Down</span>
-                <span class="method-start">23512 ms</span>
+                <span class="method-name">TearDown</span>
+                <span class="method-start">155563 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
