--- a/PhpTravels/test-output/old/Default suite/methods-not-run.html
+++ b/PhpTravels/test-output/old/Default suite/methods-not-run.html
@@ -1,8 +1,6 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>com.automation.test.PhpTravelsTest.bad_LoginPasswordTest</td></tr>
-<tr><td>com.automation.test.PhpTravelsTest.hotel_SearchTest</td></tr>
-<tr><td>com.automation.base.PhpTravelsBaseClass.load_Property</td></tr>
-<tr><td>com.automation.base.PhpTravelsBaseClass.load_Property</td></tr>
-<tr><td>com.automation.base.PhpTravelsBaseClass.Tear_Down</td></tr>
-<tr><td>com.automation.base.PhpTravelsBaseClass.Tear_Down</td></tr>
+<tr><td>com.automation.base.PhpTravelsBase.TearDown</td></tr>
+<tr><td>com.automation.base.PhpTravelsBase.TearDown</td></tr>
+<tr><td>com.automation.base.PhpTravelsBase.loadProperty</td></tr>
+<tr><td>com.automation.base.PhpTravelsBase.loadProperty</td></tr>
 </table>
