--- a/PhpTravels/test-output/old/Default suite/methods.html
+++ b/PhpTravels/test-output/old/Default suite/methods.html
@@ -1,14 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9ebddf">  <td>18/08/30 12:27:39</td>   <td>0</td> <td title="&gt;&gt;PhpTravelsBaseClass.load_Property()[pri:0, instance:com.automation.test.PhpTravelsMethods@3ecd23d9]">&gt;&gt;load_Property</td> 
+<tr bgcolor="6d64ab">  <td>18/08/30 20:28:20</td>   <td>0</td> <td title="&gt;&gt;PhpTravelsBase.loadProperty()[pri:0, instance:com.automation.test.PhpTravelsMethods@3ecd23d9]">&gt;&gt;loadProperty</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1415157681</td>   <td></td> </tr>
-<tr bgcolor="aab2ec">  <td>18/08/30 12:27:39</td>   <td>849</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PhpTravelsTest.open_FirefoxBrowser()[pri:0, instance:com.automation.test.PhpTravelsTest@569cfc36]">&gt;&gt;open_FirefoxBrowser</td> 
+<tr bgcolor="aab2ec">  <td>18/08/30 20:28:20</td>   <td>738</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PhpTravelsTest.openBrowser()[pri:0, instance:com.automation.test.PhpTravelsTest@569cfc36]">&gt;&gt;openBrowser</td> 
 <td>&nbsp;</td>  <td>main@1415157681</td>   <td></td> </tr>
-<tr bgcolor="aab2ec">  <td>18/08/30 12:27:51</td>   <td>12475</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PhpTravelsTest.valid_LoginTest()[pri:0, instance:com.automation.test.PhpTravelsTest@569cfc36]">valid_LoginTest</td> 
+<tr bgcolor="aab2ec">  <td>18/08/30 20:28:43</td>   <td>23732</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PhpTravelsTest.validLoginTest()[pri:0, instance:com.automation.test.PhpTravelsTest@569cfc36]">validLoginTest</td> 
   <td>main@1415157681</td>   <td></td> </tr>
-<tr bgcolor="aab2ec">  <td>18/08/30 12:28:01</td>   <td>22317</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PhpTravelsTest.close_Browser()[pri:0, instance:com.automation.test.PhpTravelsTest@569cfc36]">&lt;&lt;close_Browser</td> 
+<tr bgcolor="aab2ec">  <td>18/08/30 20:28:54</td>   <td>34184</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PhpTravelsTest.closeBrowser()[pri:0, instance:com.automation.test.PhpTravelsTest@569cfc36]">&lt;&lt;closeBrowser</td> 
 <td>&nbsp;</td>  <td>main@1415157681</td>   <td></td> </tr>
-<tr bgcolor="9ebddf">  <td>18/08/30 12:28:02</td>   <td>23503</td> <td title="&lt;&lt;PhpTravelsBaseClass.Tear_Down()[pri:0, instance:com.automation.test.PhpTravelsMethods@3ecd23d9]">&lt;&lt;Tear_Down</td> 
+<tr bgcolor="aab2ec">  <td>18/08/30 20:28:55</td>   <td>35651</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PhpTravelsTest.openBrowser()[pri:0, instance:com.automation.test.PhpTravelsTest@569cfc36]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@1415157681</td>   <td></td> </tr>
+<tr bgcolor="aab2ec">  <td>18/08/30 20:29:08</td>   <td>48488</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PhpTravelsTest.badLoginPasswordTest()[pri:1, instance:com.automation.test.PhpTravelsTest@569cfc36]">badLoginPasswordTest</td> 
+  <td>main@1415157681</td>   <td></td> </tr>
+<tr bgcolor="aab2ec">  <td>18/08/30 20:29:13</td>   <td>53792</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PhpTravelsTest.closeBrowser()[pri:0, instance:com.automation.test.PhpTravelsTest@569cfc36]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1415157681</td>   <td></td> </tr>
+<tr bgcolor="aab2ec">  <td>18/08/30 20:29:16</td>   <td>56683</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PhpTravelsTest.openBrowser()[pri:0, instance:com.automation.test.PhpTravelsTest@569cfc36]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@1415157681</td>   <td></td> </tr>
+<tr bgcolor="aab2ec">  <td>18/08/30 20:29:31</td>   <td>71300</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PhpTravelsTest.hotelSearchTest()[pri:2, instance:com.automation.test.PhpTravelsTest@569cfc36]">hotelSearchTest</td> 
+  <td>main@1415157681</td>   <td></td> </tr>
+<tr bgcolor="aab2ec">  <td>18/08/30 20:30:54</td>   <td>154393</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PhpTravelsTest.closeBrowser()[pri:0, instance:com.automation.test.PhpTravelsTest@569cfc36]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1415157681</td>   <td></td> </tr>
+<tr bgcolor="6d64ab">  <td>18/08/30 20:30:55</td>   <td>155558</td> <td title="&lt;&lt;PhpTravelsBase.TearDown()[pri:0, instance:com.automation.test.PhpTravelsMethods@3ecd23d9]">&lt;&lt;TearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1415157681</td>   <td></td> </tr>
 </table>
