--- a/PhpTravels/test-output/old/Suite/methods-not-run.html
+++ b/PhpTravels/test-output/old/Suite/methods-not-run.html
@@ -1,2 +1,4 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.automation.test.PhpTravelsTest.hotelSearchTest</td></tr>
+<tr><td>com.automation.test.PhpTravelsTest.badLoginPasswordTest</td></tr>
 </table>
